@startuml proyecto-nuevo
skinparam linetype ortho
skinparam direction left

class GestionExpedicion {

}

class Expedicion {
    -int id
    -int cupo
    -String destino
    -String estado
    -String cronograma
    -String hito
}

class EquipoDeTrabajo {
}

class Investigador {
    -String rango
    -String nombre
    -String especialidad
}

class Bitacora {
    -archivo.txt
}

class Logro {

}

class ModuloSeguridad {

}

class Herramienta {
    -String nombre
    -String tipo
    -String estado
    -int cantidad
}

class Inventario {
    -ArrayList <Herramienta> herramientas
}

class InventarioCritico {
    -Boolean gps
}

class ControlRequisito {

}

Inventario "1" -- "1" GestionExpedicion : administra<
ModuloSeguridad " 1 " -- " 1 " Expedicion : verifica<
GestionExpedicion "1" -- " * " Expedicion : crea
Expedicion "1" -- "  *  " EquipoDeTrabajo : tiene<
EquipoDeTrabajo " 1 " -- " * " Investigador : posee<
Expedicion "1  " -- "1" Bitacora : >tiene
Bitacora " 1 " -- " * " Logro : registra<
Inventario "1  " -- "1 " InventarioCritico : tiene<
Expedicion "1" -- "1" InventarioCritico : >tiene
ControlRequisito "1" -- "1  " Expedicion
Inventario "1" -- " * " Herramienta : >contiene

@enduml